# persona-probe

./: .gitignore  README.md  pyproject.toml  requirements.txt
persona_probe/: __init__.py  backends.py  cli.py  judge.py  ollama.py  personas.py  probes.py  report.py  runner.py
personas/: rubber-duck.md  ruthless-editor.md  senior-code-reviewer.md  skeptic.md  tutor.md
probes/: rubber-duck.yaml  ruthless-editor.yaml  senior-code-reviewer.yaml  skeptic.yaml  tutor.yaml
tests/: test_backends.py  test_personas.py
